优化系统数据结构
